--- a/titulos.html
+++ b/titulos.html
@@ -51,7 +51,7 @@
     <img id="five" src="https://2.bp.blogspot.com/-TMoqpD2vwFw/V0ThAlDdhgI/AAAAAAAAWPk/U6aRAw3nJlgcMTG1vMWEZGkuUBpzykdHwCKgB/s400/trofeus%2Bdo%2Bsao%2Bpaulo%2B%25286%2529.jpg" alt="Taças são paulo">
 
 <br>
-<a href="Principal.html">Voltar a página principal</a></input>
+<a href="index.html">Voltar a página principal</a></input>
         
 </body>
 </html>
